# pass-it-on-minecraft-log-monitor

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yaml  release.yml  test.yml
resources/docker/: start_monitor-sh  start_monitor.sh
src/: cli.rs  configuration.rs  discord_bot.rs  lib.rs  log_monitor.rs  log_record.rs  monitor.rs
systemd/: mc-monitor@.service
tests/: log_record_tests.rs
