[package]
name = "minecraft-server-monitor"
description = "A simple Minecraft server status monitor using pass-it-on client"
version = "0.2.1"
edition = "2021"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me"]
repository = "https://github.com/kwheelans/minercraft-server-monitor"
license = "MIT"


[dependencies]
anyhow = "1"
clap = {version = "4.3", features = ["derive", "cargo"]}
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "io-util", "fs"]}
pass-it-on = { version = "0.6", features = ["client", "http-client", "parse-cfg"], default-features = false }
log = "0.4"
simple_logger = "4.2"

[profile.release]
lto = true
codegen-units = 1
