[package]
name = "pass-it-on-minecraft-log-monitor"
description = "A simple Minecraft server status monitor using pass-it-on client"
version = "0.6.1"
edition = "2021"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me"]
repository = "https://github.com/kwheelans/pass-it-on-minecraft-log-monitor"
license = "MIT"


[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive", "cargo"]}
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "io-util", "fs"]}
pass-it-on = { version = "0.14", features = ["client", "http-client", "parse-cfg", "vendored-tls"], default-features = false }
log = "0.4"
toml = "0.8"
serde = { version = "1.0.189", features = ["derive"] }
simple_logger = "4.2"


[profile.release]
lto = true
codegen-units = 1
