[package]
name = "pass-it-on-minecraft-log-monitor"
description = "A simple Minecraft server status monitor using pass-it-on client"
version = "0.8.4"
edition = "2024"
authors = ["Kevin Wheelans <kevin.wheelans@proton.me"]
repository = "https://github.com/kwheelans/pass-it-on-minecraft-log-monitor"
license = "MIT"


[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive", "cargo"]}
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "time", "io-util", "fs"]}
pass-it-on = { version = "0.17", features = ["client", "http-client", "parse-cfg"], default-features = false }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1
